fixed day alignment

--- a/Events Calender/src/components/UpdateEventForm/UpdateEventForm.module.scss
+++ b/Events Calender/src/components/UpdateEventForm/UpdateEventForm.module.scss
@@ -13,12 +13,12 @@
     font-size: 25px;
     &__submit {
       border-radius: 5px;
-      // width: 50px;
+
       aspect-ratio: 1/1;
       height: 30px;
       margin: 5px;
       background-color: black;
-      color: rgb(46, 111, 197);
+      color: rgb(105, 151, 210);
       font-size: 25px;
       display: flex;
       flex-direction: row;
@@ -30,7 +30,7 @@
     }
     &__cancel {
       border-radius: 5px;
-      // width: 50px;
+
       aspect-ratio: 1/1;
       height: 30px;
       margin: 5px;
